css/main.css
/* ... */
#about h2 {
  margin: 0;
}

#about .divider {
  background: #DCF0A2;
  height: 3px;
  width: 100%;
  margin: 20px 0 30px 0;
}

#about .paragraph-bottom {
  margin-top: 10px;
}



/* ---------- Main Portfolio ----------*/


#portfolio .content-wrapper {
  padding-top: 70px;
  padding-bottom: 50px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-flow: row wrap;
}

#portfolio h2 {
  display: flex;
  margin: 0;
  width: 100%;
}

/*
#portfolio .divider {
  background: #DCF0A2;
  height: 2px;
  width: 100%;
  margin: 20px 0 0 0;
}
*/

#portfolio h3 {
  margin: 0;
  margin-bottom: 20px;
  margin-top: 60px;
  border-bottom: 2px solid #DCF0A2;
  border-top: 2px solid #DCF0A2;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
}



#portfolio h4 {
  color: #1F3C64;
  font-weight: 600;
  margin: 0;
  margin-bottom: 0;
}

main #portfolio .photo-container {
 text-align: center;
 display: flex; 
 flex-direction: column; 
 justify-content: center; 
 align-content: center;
}

main #portfolio  .full-width-item {
  margin-bottom: 20px;
}

main #portfolio img {
  border: none;
}

main #portfolio .full-width-item img {
 width: 100%;
}



#portfolio .thumbnail-wrapper-container {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}



main #portfolio .mobile-tablet-container {
 position: relative;
 text-align: center;
 display: flex; 
 justify-content: space-between; 
 align-content: flex-start;
 align-items: center;
 width: 100%;
}

main #portfolio  .tablet-item {
  display: flex;
  width: 66%;
}

main #portfolio .mobile-item {
  display: flex;
  width: 30%;
}

main .hover:hover {
      opacity: 0.5;
      filter: alpha(opacity=100);
}

main #portfolio .mobile-tablet-container .tablet-item img {
  display: flex;
  align-self: center;
  width: 100%;
}

main #portfolio .mobile-tablet-container .mobile-item img {
  display: flex;
  align-self: center;
  width: 100%;
}

main #portfolio .thumbnail-wrapper-container h4 {
  padding: 0px 0 5px 0;
}

main #portfolio .thumbnail-wrapper-container p {
  color: #1F3C64;
  font-size: 1em;
  margin-bottom: 10px;
  min-height: 100px;
}

main #portfolio .thumbnail-wrapper-container {
  /*border-top: 2px solid #DCF0A2;
  */
  padding-bottom: 10px;
  padding-top: 30px;
}

/*
main #portfolio .thumbnail-bottom {
  border-bottom: 2px solid #DCF0A2;
}
*/

#portfolio .flex-items {
  margin: 0 0 10px 0;
}

#portfolio .design {
  border: 1px solid lightgray;
}




/* ---------- Main Services ----------*/


 #services .content-wrapper {
  padding-bottom: 40px;
  padding-top: 70px;
}

#services h2 {
  margin: 0;
  padding-bottom: 25px;
}

/*
#services .divider {
  background: #DCF0A2;
  height: 3px;
  width: 100%;
  margin: 20px 0 30px 0;
}
*/

.services-items {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  align-items: center;
}

#services .row {
  border-top: 2px solid #DCF0A2;
}

article {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  align-items: center;
  /*
  border-top-left-radius: 20px 10px;
  border-top-right-radius: 10px 10px;
  */
  padding: 20px 0 35px 0;
  width: 100%;
}

.services-items h3 {
  display: flex;
  width: 45%;
}

.fontawesome-icon {
  display: flex;
  justify-content: flex-start;
  width: 55%; 
}

.fontawesome-icon i {
  font-size: 40px;
}

.services-description {
  display: flex;
  width: 100%;
}

.bottom-item {
  border-bottom: 2px solid #DCF0A2;
}






/* Hide Tablet Content */

.tablet-content {
  display: none;
}

@media screen and (min-width: 768px) {
  .tablet-content {
    display:block;
  }
}




}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

 .hidden {
  display: none !important;
}

/*
* Hide only visually, but have it available for screen readers:
* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
*
* 1. For long content, line feeds are not interpreted as spaces and small width
*    causes content to wrap 1 word per line:
*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
*/

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
* Extends the .sr-only class to allow the element
* to be focusable when navigated to via the keyboard:
* https://www.drupal.org/node/897638
*/

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
* Hide visually and from screen readers, but maintain layout
*/

.invisible {
  visibility: hidden;
}

/*
* Clearfix: contain floats
*
* For modern browsers
* 1. The space content is one way to avoid an Opera bug when the
*    `contenteditable` attribute is included anywhere else in the document.
*    Otherwise it causes space to appear at the top and bottom of elements
*    that receive the `clearfix` class.
* 2. The use of `table` rather than `block` is only necessary if using
*    `:before` to contain the top-margins of child elements.
*/

.clearfix:before,
.clearfix:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */
}

.clearfix:after {
  clear: both;
}
/* ... */

